--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-Hello World
+<!DOCTYPE html>
+
+<html>
+
+  <head>
+    <meta charset="UTF-8">
+    <title>Adrián Tóth</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+
+  <body>
+    <header>
+        <center>
+            <img src="img/quokka.jpg" alt="Europ"/>
+            <h1>Adrián Tóth</h1>
+        </center>
+    </header>
+
+    <footer>
+    </footer>
+  </body>
+
+</html>
