--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
   <body>
     <header>
-        <center>
-            <img src="img/quokka.jpg" alt="Europ"/>
-            <h1>Adrián Tóth</h1>
-        </center>
+      <div id="me">
+        <img src="img/quokka.jpg" alt="img/quokka.jpg"/>
+        <h1>Adrián Tóth</h1>
+      </div>
     </header>
 
     <footer>
