--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
-  <body>
+  <body class="bg">
     <header>
       <div id="me">
         <img src="img/quokka.jpg" alt="img/quokka.jpg"/>
