--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
         <img src="img/quokka.jpg" alt="img/quokka.jpg"/>
         <h1>Adrián Tóth</h1>
       </div>
+      <div id="about">         
+        <li>
+          <a href="https://github.com/europ">
+            <img src="img/github.png" alt="img/github.png" width="110px" height="51"/>
+          </a>
+        </li>
+        <li>
+          <a href="https://sourcerer.io/europ">
+            <img src="img/sourcerer.png" alt="img/sourcerer.png" width="40px" height="46px"/>
+          </a>
+        </li>
+      </div>
     </header>
 
     <footer>
