particles with content

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"></script>
+
   <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
   <script>
       particlesJS.load('particles-js', 'particlesjs.json', function() {
           console.log('callback - particles.js config loaded');
@@ -13,6 +16,27 @@
     <title>Adrián Tóth</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
+
+  <div class="container">
+    <div class="text-center text-light">
+      <div id="me">
+        <img src="img/quokka.jpg" alt="img/quokka.jpg" width="500px" height="333px"/>
+        <h1>Adrián Tóth</h1>
+      </div>
+      <div id="about">         
+        <li>
+          <a href="https://github.com/europ">
+            <img src="img/github_invert.png" alt="img/github.png" width="110px" height="51"/>
+          </a>
+        </li>
+        <li>
+          <a href="https://sourcerer.io/europ">
+            <img src="img/sourcerer_invert.png" alt="img/sourcerer.png" width="40px" height="46px"/>
+          </a>
+        </li>
+      </div>
+    </div>
+  </div>
 
   <div id="particles-js"></div>
 
