--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
 
   <script src="particles.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
-  <script>
-      particlesJS.load('particles-js', 'particlesjs.json', function() {
-          console.log('callback - particles.js config loaded');
-      });
+  <script type="text/javascript">
+    particlesJS.load('particles-js', 'particlesjs.json', function() {
+        console.log('callback - particles.js config loaded');
+    });
+
+    function button_action() {
+      var element = document.getElementById("content");
+      var button = document.getElementById("button_hideshow");
+      if(element.style.display === "none") {
+        element.style.display = "block";
+        button.innerHTML = "Hide";
+      }
+      else {
+        element.style.display = "none";
+        button.innerHTML = "Show";
+      }
+    };
   </script>
 
   <head>
@@ -17,23 +30,27 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
-  <div class="container">
-    <div class="text-center text-light">
-      <div id="me">
-        <img src="img/quokka.jpg" alt="img/quokka.jpg" width="500px" height="333px"/>
-        <h1>Adrián Tóth</h1>
-      </div>
-      <div id="about">         
-        <li>
-          <a href="https://github.com/europ">
-            <img src="img/github_invert.png" alt="img/github.png" width="110px" height="51"/>
-          </a>
-        </li>
-        <li>
-          <a href="https://sourcerer.io/europ">
-            <img src="img/sourcerer_invert.png" alt="img/sourcerer.png" width="40px" height="46px"/>
-          </a>
-        </li>
+  <button onclick="button_action()" id="button_hideshow" type="button" class="text-center btn btn-info btn-sm">Hide</button>
+
+  <div id="content">
+    <div class="container">
+      <div class="text-center text-light">
+        <div id="me">
+          <img src="img/quokka.jpg" alt="img/quokka.jpg" width="500px" height="333px"/>
+          <h1>Adrián Tóth</h1>
+        </div>
+        <div id="about">
+          <li>
+            <a href="https://github.com/europ">
+              <img src="img/github_invert.png" alt="img/github.png" width="110px" height="51"/>
+            </a>
+          </li>
+          <li>
+            <a href="https://sourcerer.io/europ">
+              <img src="img/sourcerer_invert.png" alt="img/sourcerer.png" width="40px" height="46px"/>
+            </a>
+          </li>
+        </div>
       </div>
     </div>
   </div>
