--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
-  <button onclick="button_action()" id="button_hideshow" type="button" class="text-center btn btn-info btn-sm">Hide</button>
+  <button onclick="button_action()" id="button_hideshow">Hide</button>
 
   <div id="content">
     <div class="container">
