--- a/index.html
+++ b/index.html
@@ -32,24 +32,24 @@
 
   <button onclick="button_action()" id="button_hideshow">Hide</button>
 
-  <div id="content">
-    <div class="container">
-      <div class="text-center text-light">
-        <div id="me">
-          <img src="img/quokka.jpg" alt="img/quokka.jpg" width="500px" height="333px"/>
-          <h1>Adrián Tóth</h1>
-        </div>
-        <div id="about">
-          <li>
+  <div id="content" class="container">
+    <div class="text-center text-light">
+      <div class="me">
+        <img src="img/quokka.jpg" alt="img/quokka.jpg" width="500px" height="333px"/>
+        <h1>Adrián Tóth</h1>
+      </div>
+      <div class="container about">
+        <div class="row justify-content-md-center">
+          <div class="col col-lg-2">
             <a href="https://github.com/europ">
-              <img src="img/github_invert.png" alt="img/github.png" width="110px" height="51"/>
+              <img src="img/github.svg" alt="img/github.svg" width="46" height="46"/>
             </a>
-          </li>
-          <li>
+          </div>
+          <div class="col col-lg-2">
             <a href="https://sourcerer.io/europ">
-              <img src="img/sourcerer_invert.png" alt="img/sourcerer.png" width="40px" height="46px"/>
+              <img src="img/sourcerer.png" alt="img/sourcerer.png" width="40px" height="46px"/>
             </a>
-          </li>
+          </div>
         </div>
       </div>
     </div>
