--- a/index.html
+++ b/index.html
@@ -1,10 +1,46 @@
 <!DOCTYPE html>
 <html>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"></script>
+  <head>
+    <meta charset="UTF-8"/>
+    <title>Adrián Tóth</title>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"/>
+  </head>
 
-  <script src="particles.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+  <body>
+    <button onclick="button_action()" id="button_hideshow">Hide</button>
+
+    <div class="vertical-center">
+      <div id="content" class="container">
+        <div class="text-center text-light">
+          <div class="me">
+            <img src="img/quokka.jpg" alt="img/quokka.jpg" width="500px" height="333px"/>
+            <h1>Adrián Tóth</h1>
+          </div>
+          <div class="container about">
+            <div class="row justify-content-md-center">
+              <div class="col col-lg-2">
+                <a href="https://github.com/europ">
+                  <img src="img/github.svg" alt="img/github.svg" width="46px" height="46px"/>
+                </a>
+              </div>
+              <div class="col col-lg-2">
+                <a href="https://sourcerer.io/europ">
+                  <img src="img/sourcerer.png" alt="img/sourcerer.png" width="40px" height="46px"/>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="particles-js"></div>
+  </body>
+
+  <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
   <script type="text/javascript">
     particlesJS.load('particles-js', 'particlesjs.json', function() {
         console.log('callback - particles.js config loaded');
@@ -23,38 +59,5 @@
       }
     };
   </script>
-
-  <head>
-    <meta charset="UTF-8">
-    <title>Adrián Tóth</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
-
-  <button onclick="button_action()" id="button_hideshow">Hide</button>
-
-  <div id="content" class="container">
-    <div class="text-center text-light">
-      <div class="me">
-        <img src="img/quokka.jpg" alt="img/quokka.jpg" width="500px" height="333px"/>
-        <h1>Adrián Tóth</h1>
-      </div>
-      <div class="container about">
-        <div class="row justify-content-md-center">
-          <div class="col col-lg-2">
-            <a href="https://github.com/europ">
-              <img src="img/github.svg" alt="img/github.svg" width="46" height="46"/>
-            </a>
-          </div>
-          <div class="col col-lg-2">
-            <a href="https://sourcerer.io/europ">
-              <img src="img/sourcerer.png" alt="img/sourcerer.png" width="40px" height="46px"/>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div id="particles-js"></div>
 
 </html>
