--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div id="content" class="container">
         <div class="text-center text-light">
           <div class="me">
-            <img src="img/quokka.jpg" alt="img/quokka.jpg" width="500px" height="333px"/>
+            <img src="https://avatars2.githubusercontent.com/u/22373707?s=400&v=4" alt="me"/>
             <h1>Adrián Tóth</h1>
           </div>
           <div class="container about">
